--- a/cLock-Timer-Info.plist
+++ b/cLock-Timer-Info.plist
@@ -1,5 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>VCR OSD Mono 400.ttf</string>
+		<string>Computo Monospace 400.otf</string>
+		<string>Digital-7 400.ttf</string>
+		<string>Digital-7 Mono 400.ttf</string>
+		<string>Digital-7 MonoItalic 400.ttf</string>
+		<string>Major Mono Display Regular 400.ttf</string>
+		<string>Iceberg 400.ttf</string>
+		<string>Digital Numbers 400.ttf</string>
+		<string>3270-Medium 500.ttf</string>
+		<string>3270 Narrow 500.ttf</string>
+		<string>3270 Semi-Narrow 500.ttf</string>
+		<string>Digital-7 Italic 400.ttf</string>
+		<string>Libertinus Mono Regular 400.otf</string>
+		<string>Static Regular 400.otf</string>
+		<string>Static Italic 400.otf</string>
+		<string>Static Bold Italic 700.otf</string>
+		<string>Static Bold 700.otf</string>
+		<string>TaurusMonoStencil 400.otf</string>
+		<string>TaurusMonoStencilDistress 400.otf</string>
+		<string>TaurusMonoStencilDistress-Bold 700.otf</string>
+		<string>TaurusMonoStencil-Bold 700.otf</string>
+		<string>TaurusMono 400.otf</string>
+		<string>TaurusMonoOutline 400.otf</string>
+		<string>TaurusMonoOutline-Bold 700.otf</string>
+		<string>TaurusMonoDistress 400.otf</string>
+		<string>TaurusMonoDistress-Bold 700.otf</string>
+		<string>TaurusMono-Bold 700.otf</string>
+	</array>
+</dict>
 </plist>
